[gd_scene load_steps=3 format=3 uid="uid://wj1pfg1v5lkb"]

[ext_resource type="FontFile" uid="uid://kl7l1rnj2f6v" path="res://assets/Myfont-Regular.ttf" id="1_b36y5"]
[ext_resource type="Script" path="res://scenes/high_score_scene/high_score_scene.gd" id="1_ymhtu"]

[node name="HighScoreScene" type="Node2D"]
script = ExtResource("1_ymhtu")

[node name="BackgroundColorCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundColorRect" type="ColorRect" parent="BackgroundColorCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_lock_ = true

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="GameNameLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 64.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b36y5")
theme_override_font_sizes/font_size = 124
text = "High
Scores"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScore1stPositionLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 384.0
offset_bottom = 416.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b36y5")
theme_override_font_sizes/font_size = 28
text = "1st Position 0
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScore2ndPositionLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 432.0
offset_bottom = 464.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b36y5")
theme_override_font_sizes/font_size = 28
text = "2dn Position 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScore3rdPositionLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 480.0
offset_bottom = 512.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b36y5")
theme_override_font_sizes/font_size = 28
text = "3rd Position 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScore4thPositionLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 528.0
offset_bottom = 560.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b36y5")
theme_override_font_sizes/font_size = 28
text = "4th Position 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScore5thPositionLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 576.0
offset_bottom = 608.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b36y5")
theme_override_font_sizes/font_size = 28
text = "5th Position 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true
